--- a/header.html
+++ b/header.html
@@ -16,6 +16,13 @@
 </head>
 <body>
 
+<header class="header-area">
+    <div class="header-top">
+        <div class="container-fluid">
+            <span class="top-title">Save up to 20% on all Toys & Accessories with “ta-pro-22” code</span>
+        </div>
+    </div>
+</header>
     
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
