footer done without responsiveness

--- a/footer.html
+++ b/footer.html
@@ -168,39 +168,81 @@
                 </div>
                 <div class="social">
                     <p>Follow us</p>
-                    <ul class="d-flex">
+                    <ul>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-facebook"></i>
+                                <span class="tooltiptext">Facebook</span>
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-instagram"></i>
+                                <span class="tooltiptext">Instagram</span>
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-linkedin"></i>
+                                <span class="tooltiptext">Linkedin</span>
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-telegram"></i>
+                                <span class="tooltiptext">Telegram</span>
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-twitter"></i>
+                                <span class="tooltiptext">Twitter</span>
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">
                                 <i class="fa fa-youtube-play"></i>
+                                <span class="tooltiptext">Youtube</span>
                             </a>
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <ul class="terms-privacy">
+                    <li>
+                        <a href="javascript:void(0)">Terms of Use</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">Interest-Based Ads</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">Accessibility</a>
+                    </li>
+                </ul>
+                <p class="copyright">Copyright ©
+                    <script>document.write(new Date().getFullYear()) </script> cutepie!. All Rights Reserved
+                </p>
+                <div class="footer-description">
+                    <small>A pet doesn’t need much to be happy, but some things are harder to provide than others.
+                        Luckily, there are plenty of places you can go to get everything your pet needs, from food and
+                        toys to accessories like leashes and collars. Here are some of the best places to shop for your
+                        pet .
+                    </small>
+                    <small>
+                        Creating the perfect home environment for your pet is as important as food and shelter, and
+                        sometimes it’s even more fun to shop for than human stuff! But with so many pet stores and
+                        online retailers to choose from, how do you know where to go? Look no further than this guide on
+                        the best places to shop for your pet’s supplies, full of information on how to find the best
+                        products at the best prices while taking into account your pet’s unique needs.
+                    </small>
+                </div>
+
             </div>
         </div>
 
