footer responsiveness added

--- a/footer.html
+++ b/footer.html
@@ -32,8 +32,8 @@
         </div>
         <div class="footer-middle">
             <div class="container">
-                <div class="row">
-                    <div class="col-3 footer-middle-left">
+                <div class="row g-4">
+                    <div class="col-xxl-3 footer-middle-left">
                         <h3>
                             Top quality food and products for the happiness & health
                             of your pet!
@@ -49,7 +49,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-6 footer-middle-middle">
+                    <div class="col-12 col-md-7 col-xxl-6 footer-middle-middle">
                         <div class="row">
                             <div class="col-4">
                                 <h6>
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 footer-middle-right">
+                    <div class="col-12 col-md-5  col-xxl-3 footer-middle-right">
                         <img src="./assets/images/cutepie-footer-logo.png" alt="cutepie logo">
                         <p class="address">1487 Rocky Horse Carrefour
                             Arlington, TX 16819</p>
