--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Home</title>
+    <title>CUTEPIE</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/odometer-theme-default.css">
     <link rel="stylesheet" href="assets/css/slick.css">
@@ -25,43 +25,50 @@
             </div>
         </div>
     </div>
-    <div class="header-middle">
-        <div class="container">
-            <div class="middle-wrapper">
-                <div class="middle-left">
-                    <div class="logo">
-                        <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
-                    </div>
-                    <form action="" class="product-search-wrap d-flex">
-                        <select name="category" id="category">
-                            <option value="category">Category</option>
-                            <option value="care">Cre</option>
-                            <option value="dog_treat">Dog Treats</option>
-                            <option value="dry_food">Dry Food</option>
-                            <option value="grooming">Grooming</option>
-                            <optgroup label="Pet Pharmecy">
-                              <option value="volvo">Dental Care</option>
-                              <option value="saab">Recovery Cones</option>
-                            </optgroup>
-                            <option value="supplement">Supplements</option>
-                            <optgroup label="Toys & accessories">
-                              <option value="volvo">Demo</option>
-                              <option value="saab">Demo 2</option>
-                            </optgroup>
-                        </select>
-                        <div class="product-search-input">
-                            <input type="text" placeholder="What are you looking for?">
-                            <div class="search-icon">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </form>
+    <div class="container">
+        <div class="middle-wrapper">
+            <div class="middle-left">
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
                 </div>
-                <ul class="middle-right">
-                    <li></li>
-                </ul>
+                <form action="" class="product-search-wrap d-flex">
+                    <select name="category" id="category">
+                        <option value="category">Category</option>
+                        <option value="care">Cre</option>
+                        <option value="dog_treat">Dog Treats</option>
+                        <option value="dry_food">Dry Food</option>
+                        <option value="grooming">Grooming</option>
+                        <optgroup label="Pet Pharmecy">
+                          <option value="volvo">Dental Care</option>
+                          <option value="saab">Recovery Cones</option>
+                        </optgroup>
+                        <option value="supplement">Supplements</option>
+                        <optgroup label="Toys & accessories">
+                          <option value="volvo">Demo</option>
+                          <option value="saab">Demo 2</option>
+                        </optgroup>
+                    </select>
+                    <div class="product-search-input">
+                        <input type="text" placeholder="What are you looking for?">
+                        <div class="search-icon">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </form>
             </div>
+            <ul class="middle-right">
+                <li>$USD <span><i class="fa fa-angle-down" aria-hidden="true"></i></span></li>
+                <li>En <span><i class="fa fa-angle-down" aria-hidden="true"></i></span></li>
+                <li> <span><i class="fa fa-user" aria-hidden="true"></i></span> My Account</li>
+            </ul>
         </div>
+        <ul class="menu-area">
+            <li><a href="#"> <span><i class="fa fa-bars" aria-hidden="true"></i></span>All categories</a></li>
+            <li><a href="#"> Home </a></li>
+            <li><a href="#"> Shope</a></li>
+            <li><a href="#"> Blog</a></li>
+            <li><a href="#"> <span><i class="fa fa-bars" aria-hidden="true"></i></span>All categories</a></li>
+        </ul>
     </div>
 </header>
     
