header and home page add

--- a/ecommarce/footer.html
+++ b/ecommarce/footer.html
@@ -33,7 +33,7 @@
         <div class="footer-middle">
             <div class="container">
                 <div class="row g-4">
-                    <div class="col-xxl-3 footer-middle-left">
+                    <div class="col-xxl-3 d-none d-xxl-block footer-middle-left">
                         <h3>
                             Top quality food and products for the happiness & health
                             of your pet!
