--- a/ecommarce/header.html
+++ b/ecommarce/header.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<header class="header-area">
+<!-- <header class="header-area">
     <div class="header-top text-center">
         <div class="container-fluid">
             <p class="top-title">Save <span class="fw-bold">up to 20%</span> on all Toys & Accessories with <span class="them-color">“ta-pro-22”</span> code</p>
@@ -70,7 +70,7 @@
             <li><a href="#"> <span><i class="fa fa-bars" aria-hidden="true"></i></span>All categories</a></li>
         </ul>
     </div>
-</header>
+</header> -->
     
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
