--- a/ecommarce/shop-page.html
+++ b/ecommarce/shop-page.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Home</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/odometer-theme-default.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/sass/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/odometer-theme-default.css">
+    <link rel="stylesheet" href="/assets/css/slick.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/default.css">
+    <link rel="stylesheet" href="/assets/sass/style.css">
 
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="container">
                 <div class="shop-card-content">
                     <div class="single-card">
-                        <img src="./assets/images/Wet-food-cat.jpg" alt="Wet food">
+                        <img src="../assets/images/Wet-food-cat.jpg" alt="Wet food">
                         <h6 class="card-title"><a href="#">Wet food</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -52,7 +52,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/dog-treats-cat.jpg" alt="Dog treats
+                        <img src="../assets/images/dog-treats-cat.jpg" alt="Dog treats
                             ">
                         <h6 class="card-title"><a href="#">Dog treats
                             </a></h6>
@@ -83,7 +83,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/grooming-cat.jpg" alt="grooming">
+                        <img src="../assets/images/grooming-cat.jpg" alt="grooming">
                         <h6 class="card-title"><a href="#">Grooming</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -112,7 +112,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/wet-food-cat-2nd.jpg" alt="grooming">
+                        <img src="../assets/images/wet-food-cat-2nd.jpg" alt="grooming">
                         <h6 class="card-title"><a href="#">Wet food</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -141,7 +141,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/dry-food-cat.jpg" alt="Wet food">
+                        <img src="../assets/images/dry-food-cat.jpg" alt="Wet food">
                         <h6 class="card-title"><a href="#">Dry food</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -170,7 +170,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/transporters-cat.jpg" alt="Dog treats
+                        <img src="../assets/images/transporters-cat.jpg" alt="Dog treats
                             ">
                         <h6 class="card-title"><a href="#">Transporters</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
@@ -200,7 +200,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/supplements-cat.jpg" alt="grooming">
+                        <img src="../assets/images/supplements-cat.jpg" alt="grooming">
                         <h6 class="card-title"><a href="#">Supplements</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -229,7 +229,7 @@
                         </ul>
                     </div>
                     <div class="single-card">
-                        <img src="./assets/images/dry-food-cat-2nd.jpg" alt="grooming">
+                        <img src="../assets/images/dry-food-cat-2nd.jpg" alt="grooming">
                         <h6 class="card-title"><a href="#">Dry food</a></h6>
                         <p class="card-sub-title"><a href="#">ORIJEN Original Recipe Grain Free High
                             </a> </p>
@@ -284,10 +284,10 @@
     </section>
     <!-- Bestsellers section end-->
 
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/odometer.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/odometer.js"></script>
+    <script src="/assets/js/slick-slider.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script>
       
     </script>
