shop page done and doing item details

--- a/ecommarce/header-joy.html
+++ b/ecommarce/header-joy.html
@@ -1757,7 +1757,7 @@
 
 
                         </ul>
-                        <ul class="by-item row g-3 by-brand">
+                        <ul class="by-item row g-3">
                             <h6 class="sideNav-tab-title">
                                 Shop by brand
                             </h6>
