cart page, checkout page and  wishlist added and some modification on the existing page

--- a/ecommarce/shop-item-details.html
+++ b/ecommarce/shop-item-details.html
@@ -696,7 +696,7 @@
 
                             <div class="mb-3">
                                 <label for="review" class="form-label f-14">Your review *</label>
-                                <textarea class="form-control f-14" id="review" rows="3"></textarea>
+                                <textarea class="form-control f-14" id="review" rows="4"></textarea>
                             </div>
                             <div class="row">
                                 <div class="mb-3 col-6">
@@ -714,7 +714,7 @@
                                     Save my name, email, and website in this browser for the next time I comment.
                                 </label>
                             </div>
-                            <a href="#" class="common-button">Submit</a>
+                            <button type="submit" class="common-button">Submit</button>
                         </form>
                     </div>
                 </div>
