--- a/ecommarce/footer.html
+++ b/ecommarce/footer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CutePi</title>
+    <title>CUTEPIE</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/odometer-theme-default.css">
     <link rel="stylesheet" href="/assets/css/slick.css">
