favorite page done

--- a/community/community_index.html
+++ b/community/community_index.html
@@ -22,7 +22,7 @@
     <header class="community-header-area">
         <div class="main-header">
             <div class="community-logo">
-                <a href="#"><img src="../assets/images/community/logo.png" alt="Logo"></a>
+                <a href="community_index.html"><img src="../assets/images/community/logo.png" alt="Logo"></a>
             </div>
             <div class="community-header-content">
                 <div class="menu-show">
@@ -269,8 +269,8 @@
                                     </p>
                                 </div>
                                 <ul class="settings-list">
-                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">My Profile</a></li>
-                                    <li><i class="fa fa-cog" aria-hidden="true"></i><a href="#">Setting</a></li>
+                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="my-profile.html">My Profile</a></li>
+                                    <li><i class="fa fa-cog" aria-hidden="true"></i><a href="setting.html">Setting</a></li>
                                     <li><i class="fa fa-user-secret" aria-hidden="true"></i><a href="#">Privecy</a></li>
                                     <li><i class="fa fa-question-circle" aria-hidden="true"></i><a href="#">Help & Support</a></li>
                                     <li><i class="fa fa-sign-out" aria-hidden="true"></i><a href="#">Logout</a></li>
