--- a/community/setting.html
+++ b/community/setting.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/odometer-theme-default.css">
     <link rel="stylesheet" href="../assets/css/slick.css">
     <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/css/nice-select.css">
     <link rel="stylesheet" href="../assets/css/default.css">
     <link rel="stylesheet" href="../assets/sass/style.css">
 
@@ -995,9 +996,14 @@
 
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/jquery.nice-select.min.js"></script>
     <script src="../assets/js/odometer.js"></script>
     <script src="../assets/js/slick-slider.js"></script>
     <script src="../assets/js/community/script.js"></script>
 </body>
-
+<script>
+    $(document).ready(function() {
+  $('select').niceSelect();
+});
+</script>
 </html>
